<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>tech.octopusdragon</groupId>
  <artifactId>japanese-practice</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <name>Japanese Practice</name>
  <description>Allows the user to practice writing kanji, conjugating predicates, and guessing the reading of numeral/counter compounds.</description>
  <build>
    <sourceDirectory>src</sourceDirectory>
    <resources>
      <resource>
        <directory>src</directory>
        <excludes>
          <exclude>**/*.java</exclude>
        </excludes>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <dependencies>
	<dependency>
	  <groupId>com.google.code.gson</groupId>
	  <artifactId>gson</artifactId>
	  <version>2.10.1</version>
	</dependency>
	<dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-lang3</artifactId>
      <version>3.14.0</version>
	</dependency>
	<dependency>
	  <groupId>com.andree-surya</groupId>
	  <artifactId>moji4j</artifactId>
	  <version>1.0.0</version>
	</dependency>
  </dependencies>
</project>